agregando paginas de galeria, blog,entrada y tienda

--- a/entrada.html
+++ b/entrada.html
@@ -38,13 +38,9 @@
 
 
     <main class="main">
-
-
         <section class="section">
-
             <div class="container">
-                <h2 class="section__title">Nuestro Blog</h2>
-                <div class="container__blog gap-md">
+                <div class="blog--container-entry">
                     <div class="blog">
                         <article class="blog__entry">
                             <header>
@@ -65,43 +61,9 @@
                                     nesciunt vel sunt numquam tempore provident facilis impedit corporis placeat culpa
                                     est, assumenda atque officia, quis ad dolores! Dolorum.</p>
                             </div>
-                            <a class="blog__link-button t-align-center max-width-md" href="./entrada.html">Leer Más</a>
-                        </article>
-
-                        <article class="blog__entry">
-                            <header>
-                                <h2>Guia de Colores</h2>
-                            </header>
-                            <div>
-                                <img class="blog__img" src="./img/nosotros.jpg" alt="imagen blog">
-                            </div>
-                            <div class="blog__meta">
-                                <p>Fecha <span>15 de Enero de 2023</span> </p>
-                                <p>Escrito por: <span>Tienda Feliz de Muebles</span> </p>
-                            </div>
-                            <div class="blog__text">
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore delectus, deserunt
-                                    nesciunt vel sunt numquam tempore provident facilis impedit corporis placeat culpa
-                                    est, assumenda atque officia, quis ad dolores! Dolorum.</p>
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore delectus, deserunt
-                                    nesciunt vel sunt numquam tempore provident facilis impedit corporis placeat culpa
-                                    est, assumenda atque officia, quis ad dolores! Dolorum.</p>
-                            </div>
-                            <a class="blog__link-button t-align-center max-width-md" href="./entrada.html">Leer Más</a>
                         </article>
 
                     </div>
-                    <aside>
-                        <h3>Otras entradas de blog</h3>
-                        <ol class="blog-list">
-                            <li class="blog-list__item"><a class="blog-list__link" href="">Guia de Colores</a></li>
-                            <li class="blog-list__item"><a class="blog-list__link" href="">Nuevos Modelos</a></li>
-                            <li class="blog-list__item"><a class="blog-list__link" href="">Guia para diseño de interiores</a></li>
-                            <li class="blog-list__item"><a class="blog-list__link" href="">Guia para diseño de exteriores</a></li>
-
-                        </ol>
-                    </aside>
-
                 </div>
             </div>
         </section>
