--- a/galeria.html
+++ b/galeria.html
@@ -16,7 +16,7 @@
 <body class="body">
     <header class="header">
         <!-- Una pagina web solo puede tener una etiqueta h1 -->
-        <h1 class="header__title">Nombre <span>Pagina</span></h1>
+        <h1 class="header__title">Tienda Feliz de <span>Muebles</span></h1>
     </header>
     <!-- El nombre del id solo se puede usar una vez en toda la pagina -->
     <!-- No se puede tener 2 ids dentro de una pagina Ejemplo = id="navegacion segundo-id" -->
@@ -41,8 +41,19 @@
         <section class="section">
             
             <div class="container">
-                <h2 class="section__title">Nombre pagina</h2>
+                <h2 class="section__title">Galeria</h2>
 
+                <ul class="gallery__list g-elements g-elements--gallery gap-md">
+                    <li class="gallery__item"><a class="gallery__link" href="./img/galeria_01.jpg"> <img class="gallery__img" src="./img/galeria_01.jpg" alt=""></a></li>
+                    <li class="gallery__item"><a class="gallery__link" href="./img/galeria_02.jpg"> <img class="gallery__img" src="./img/galeria_02.jpg" alt=""></a></li>
+                    <li class="gallery__item"><a class="gallery__link" href="./img/galeria_03.jpg"> <img class="gallery__img" src="./img/galeria_03.jpg" alt=""></a></li>
+                    <li class="gallery__item"><a class="gallery__link" href="./img/galeria_04.jpg"> <img class="gallery__img" src="./img/galeria_04.jpg" alt=""></a></li>
+                    <li class="gallery__item"><a class="gallery__link" href="./img/galeria_05.jpg"> <img class="gallery__img" src="./img/galeria_05.jpg" alt=""></a></li>
+                    <li class="gallery__item"><a class="gallery__link" href="./img/galeria_06.jpg"> <img class="gallery__img" src="./img/galeria_06.jpg" alt=""></a></li>
+                    <li class="gallery__item"><a class="gallery__link" href="./img/galeria_07.jpg"> <img class="gallery__img" src="./img/galeria_07.jpg" alt=""></a></li>
+                    <li class="gallery__item"><a class="gallery__link" href="./img/galeria_08.jpg"> <img class="gallery__img" src="./img/galeria_08.jpg" alt=""></a></li>
+                    <li class="gallery__item"><a class="gallery__link" href="./img/galeria_09.jpg"> <img class="gallery__img" src="./img/galeria_09.jpg" alt=""></a></li>
+                </ul>
 
             </div>
         </section>
