--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ecommerce - Contacto</title>
-    <!-- <link rel="stylesheet" href="./css/normalize.css" /> -->
+    <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -46,22 +46,22 @@
                 <h2 class="section__title">Contacto</h2>
                 <form class="form" action="">
                     <fieldset class="form__fieldset">
-                        <legend class="form__legend">Tus Datos</legend>
+                        <legend class="form__legend t-align-center">Tus Datos</legend>
                         <div class="form__field">
                             <label class="form__label" for="name">Nombre: </label>
-                            <input class="form__input" type="text" name="name" id="name" placeholder="Coloca tu nombre" />
+                            <input class="form__input" type="text" name="name" id="name" placeholder="Coloca tu nombre" required/>
                         </div>
                         <div class="form__field">
                             <label class="form__label" for="business">Asunto: </label>
-                            <input class="form__input" type="text" name="business" id="business" placeholder="Tu Asunto" />
+                            <input class="form__input" type="text" name="business" id="business" placeholder="Tu Asunto" required/>
                         </div>
                         <div class="form__field">
                             <label class="form__label" for="email">Email: </label>
-                            <input class="form__input" type="tel" name="email" id="email" placeholder="Tu Email" />
+                            <input class="form__input" type="tel" name="email" id="email" placeholder="Tu Email" required/>
                         </div>
                         <div class="form__field">
                             <label class="form__label" for="phone">Telefono: </label>
-                            <input class="form__input" type="tel" name="phone" id="phone" placeholder="Tu telefono" />
+                            <input class="form__input" type="tel" name="phone" id="phone" placeholder="Tu telefono" required/>
                         </div>
                         <div class="form__field">
                             <label class="form__label" for="message">Mensaje: </label>
@@ -70,7 +70,7 @@
                     </fieldset>
 
                     <fieldset class="form__fieldset">
-                        <legend class="form__legend">Pais</legend>
+                        <legend class="form__legend t-align-center">Pais</legend>
                         <div class="form__field">
                             <label class="form__label" for="country">Pais: </label>
                             <select name="country" id="country">
@@ -86,18 +86,18 @@
                     </fieldset>
 
                     <fieldset class="form__fieldset">
-                        <legend class="form__legend">Información Extra</legend>
+                        <legend class="form__legend t-align-center">Información Extra</legend>
                         <div class="form__field">
                             <label for="client">Cliente</label>
-                            <input type="radio" name="extinf" id="client">
+                            <input type="radio" name="extinf" id="client" />
                         </div>
                         <div class="form__field">
                             <label for="supplier">Proveedor</label>
-                            <input type="radio" name="extinf" id="supplier">
+                            <input type="radio" name="extinf" id="supplier" />
                         </div>
                         <div class="form__field">
                             <label for="category">Categioria de Interes</label>
-                            <input list="categories" name="categories">
+                            <input list="categories" name="categories" required />
                             <datalist id="categories">
                                 <option value="Cocina"/>
                                 <option value="Exterior"/>
