agregando estilos en layout.css}

--- a/galeria.html
+++ b/galeria.html
@@ -44,7 +44,7 @@
             <div class="container">
                 <h2 class="section__title">Galeria</h2>
 
-                <ul class="gallery__list g-elements g-elements--gallery gap-md">
+                <ul class="gallery__list g-elements g-elements--gallery--products gap-md">
                     <li class="gallery__item"><a class="gallery__link" href="./img/galeria_01.jpg"> <img class="gallery__img" src="./img/galeria_01.jpg" alt=""></a></li>
                     <li class="gallery__item"><a class="gallery__link" href="./img/galeria_02.jpg"> <img class="gallery__img" src="./img/galeria_02.jpg" alt=""></a></li>
                     <li class="gallery__item"><a class="gallery__link" href="./img/galeria_03.jpg"> <img class="gallery__img" src="./img/galeria_03.jpg" alt=""></a></li>
