proyecto ecommerce finalizado

--- a/blog.html
+++ b/blog.html
@@ -48,46 +48,51 @@
                     <div class="blog">
                         <article class="blog__entry">
                             <header>
-                                <h2>Guia de Colores</h2>
+                                <h2 class="blog__title">Guia de Colores</h2>
                             </header>
                             <div>
                                 <img class="blog__img" src="./img/nosotros.jpg" alt="imagen blog">
                             </div>
-                            <div class="blog__meta">
-                                <p>Fecha <span>15 de Enero de 2023</span> </p>
-                                <p>Escrito por: <span>Tienda Feliz de Muebles</span> </p>
+                            <div class="blog__body">
+                                <div class="blog__meta">
+                                    <p>Fecha <span>15 de Enero de 2023</span> </p>
+                                    <p>Escrito por: <span>Tienda Feliz de Muebles</span> </p>
+                                </div>
+                                <div class="blog__text">
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore delectus, deserunt
+                                        nesciunt vel sunt numquam tempore provident facilis impedit corporis placeat culpa
+                                        est, assumenda atque officia, quis ad dolores! Dolorum.</p>
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore delectus, deserunt
+                                        nesciunt vel sunt numquam tempore provident facilis impedit corporis placeat culpa
+                                        est, assumenda atque officia, quis ad dolores! Dolorum.</p>
+                                </div>
+                                <a class="blog__link-button t-align-center max-width-md" href="./entrada.html">Leer Más</a>
                             </div>
-                            <div class="blog__text">
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore delectus, deserunt
-                                    nesciunt vel sunt numquam tempore provident facilis impedit corporis placeat culpa
-                                    est, assumenda atque officia, quis ad dolores! Dolorum.</p>
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore delectus, deserunt
-                                    nesciunt vel sunt numquam tempore provident facilis impedit corporis placeat culpa
-                                    est, assumenda atque officia, quis ad dolores! Dolorum.</p>
-                            </div>
-                            <a class="blog__link-button t-align-center max-width-md" href="./entrada.html">Leer Más</a>
                         </article>
 
                         <article class="blog__entry">
                             <header>
-                                <h2>Guia de Colores</h2>
+                                <h2 class="blog__title">Guia de Colores</h2>
                             </header>
                             <div>
                                 <img class="blog__img" src="./img/nosotros.jpg" alt="imagen blog">
                             </div>
-                            <div class="blog__meta">
-                                <p>Fecha <span>15 de Enero de 2023</span> </p>
-                                <p>Escrito por: <span>Tienda Feliz de Muebles</span> </p>
+                            <div class="blog__body">
+                                <div class="blog__meta">
+                                    <p>Fecha <span>15 de Enero de 2023</span> </p>
+                                    <p>Escrito por: <span>Tienda Feliz de Muebles</span> </p>
+                                </div>
+                                <div class="blog__text">
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore delectus, deserunt
+                                        nesciunt vel sunt numquam tempore provident facilis impedit corporis placeat culpa
+                                        est, assumenda atque officia, quis ad dolores! Dolorum.</p>
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore delectus, deserunt
+                                        nesciunt vel sunt numquam tempore provident facilis impedit corporis placeat culpa
+                                        est, assumenda atque officia, quis ad dolores! Dolorum.</p>
+                                </div>
+                                <a class="blog__link-button t-align-center max-width-md" href="./entrada.html">Leer Más</a>
+
                             </div>
-                            <div class="blog__text">
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore delectus, deserunt
-                                    nesciunt vel sunt numquam tempore provident facilis impedit corporis placeat culpa
-                                    est, assumenda atque officia, quis ad dolores! Dolorum.</p>
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore delectus, deserunt
-                                    nesciunt vel sunt numquam tempore provident facilis impedit corporis placeat culpa
-                                    est, assumenda atque officia, quis ad dolores! Dolorum.</p>
-                            </div>
-                            <a class="blog__link-button t-align-center max-width-md" href="./entrada.html">Leer Más</a>
                         </article>
 
                     </div>
@@ -122,20 +127,20 @@
                     </ul>
                 </nav>
             </div>
-
+    
             <div class="footer__section">
                 <h3 class="footer-nav__section-title">Sobre Nosotros</h3>
                 <nav class="footer-nav">
                     <ul class="footer-nav__list">
                         <li class="footer-nav__item"><a class="footer-nav__link" href="#">Nuestra historia</a></li>
-                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Oficina</a></li>
-                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Jardín</a></li>
-                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Cochera</a></li>
-                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Dormitorios</a></li>
+                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Misión, Visión y Valores</a></li>
+                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Carreras</a></li>
+                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Politicas de Privacidad</a></li>
+                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Términos del Servicio</a></li>
                     </ul>
                 </nav>
             </div>
-
+    
             <div class="footer__section">
                 <h3 class="footer-nav__section-title">Soporte</h3>
                 <nav class="footer-nav">
