--- a/entrada.html
+++ b/entrada.html
@@ -85,20 +85,20 @@
                     </ul>
                 </nav>
             </div>
-
+    
             <div class="footer__section">
                 <h3 class="footer-nav__section-title">Sobre Nosotros</h3>
                 <nav class="footer-nav">
                     <ul class="footer-nav__list">
                         <li class="footer-nav__item"><a class="footer-nav__link" href="#">Nuestra historia</a></li>
-                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Oficina</a></li>
-                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Jardín</a></li>
-                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Cochera</a></li>
-                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Dormitorios</a></li>
+                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Misión, Visión y Valores</a></li>
+                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Carreras</a></li>
+                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Politicas de Privacidad</a></li>
+                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Términos del Servicio</a></li>
                     </ul>
                 </nav>
             </div>
-
+    
             <div class="footer__section">
                 <h3 class="footer-nav__section-title">Soporte</h3>
                 <nav class="footer-nav">
