--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </section>
 
         <section class="section">
-            
+            <!-- productos -->
             <div class="container">
                 <h2 class="section__title">Nuestros Productos</h2>
                 <div class="g-elements g-elements--cards gap-md">
@@ -164,10 +164,10 @@
                 <nav class="footer-nav">
                     <ul class="footer-nav__list">
                         <li class="footer-nav__item"><a class="footer-nav__link" href="#">Nuestra historia</a></li>
-                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Oficina</a></li>
-                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Jardín</a></li>
-                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Cochera</a></li>
-                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Dormitorios</a></li>
+                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Misión, Visión y Valores</a></li>
+                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Carreras</a></li>
+                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Politicas de Privacidad</a></li>
+                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Términos del Servicio</a></li>
                     </ul>
                 </nav>
             </div>
