--- a/galeria.html
+++ b/galeria.html
@@ -44,7 +44,7 @@
             <div class="container">
                 <h2 class="section__title">Galeria</h2>
 
-                <ul class="gallery__list g-elements g-elements--gallery--products gap-md">
+                <ul class="g-elements gallery__list g-elements--gallery--products gap-md">
                     <li class="gallery__item"><a class="gallery__link" href="./img/galeria_01.jpg"> <img class="gallery__img" src="./img/galeria_01.jpg" alt=""></a></li>
                     <li class="gallery__item"><a class="gallery__link" href="./img/galeria_02.jpg"> <img class="gallery__img" src="./img/galeria_02.jpg" alt=""></a></li>
                     <li class="gallery__item"><a class="gallery__link" href="./img/galeria_03.jpg"> <img class="gallery__img" src="./img/galeria_03.jpg" alt=""></a></li>
@@ -81,10 +81,10 @@
                 <nav class="footer-nav">
                     <ul class="footer-nav__list">
                         <li class="footer-nav__item"><a class="footer-nav__link" href="#">Nuestra historia</a></li>
-                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Oficina</a></li>
-                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Jardín</a></li>
-                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Cochera</a></li>
-                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Dormitorios</a></li>
+                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Misión, Visión y Valores</a></li>
+                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Carreras</a></li>
+                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Politicas de Privacidad</a></li>
+                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Términos del Servicio</a></li>
                     </ul>
                 </nav>
             </div>
