--- a/nosotros.html
+++ b/nosotros.html
@@ -45,15 +45,15 @@
 
             <div class="container">
                 <h2 class="section__title">Sobre Nosotros</h2>
-                <div class="section__body g-elements g-elements--center g-elements--nosotros gap-md">
+                <div class="g-elements g-elements--nosotros gap-md">
                     <div>
                         <img class="section__img" src="./img/nosotros.jpg" alt="Imagen de Nosotros">
                     </div>
-                    <div class="section__text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores debitis quis consectetur
+                    <div class="us__body">
+                        <p class="us__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores debitis quis consectetur
                             animi beatae mollitia itaque ea dicta eos. Totam repellat temporibus autem aspernatur
                             necessitatibus perspiciatis ea iste laborum ipsum!</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores debitis quis consectetur
+                        <p class="us__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores debitis quis consectetur
                             animi beatae mollitia itaque ea dicta eos. Totam repellat temporibus autem aspernatur
                             necessitatibus perspiciatis ea iste laborum ipsum!</p>
 
@@ -79,20 +79,20 @@
                     </ul>
                 </nav>
             </div>
-
+    
             <div class="footer__section">
                 <h3 class="footer-nav__section-title">Sobre Nosotros</h3>
                 <nav class="footer-nav">
                     <ul class="footer-nav__list">
                         <li class="footer-nav__item"><a class="footer-nav__link" href="#">Nuestra historia</a></li>
-                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Oficina</a></li>
-                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Jardín</a></li>
-                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Cochera</a></li>
-                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Dormitorios</a></li>
+                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Misión, Visión y Valores</a></li>
+                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Carreras</a></li>
+                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Politicas de Privacidad</a></li>
+                        <li class="footer-nav__item"><a class="footer-nav__link" href="#">Términos del Servicio</a></li>
                     </ul>
                 </nav>
             </div>
-
+    
             <div class="footer__section">
                 <h3 class="footer-nav__section-title">Soporte</h3>
                 <nav class="footer-nav">
